--- a/ByteCoin/View/Base.lproj/Main.storyboard
+++ b/ByteCoin/View/Base.lproj/Main.storyboard
@@ -97,6 +97,11 @@
                             <constraint firstItem="ct2-jk-pgH" firstAttribute="bottom" secondItem="CjI-yV-vnC" secondAttribute="bottom" id="tCZ-GN-qxe"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bitcoinLabel" destination="N2a-Ax-iRV" id="4Fa-AT-H2F"/>
+                        <outlet property="currencyLabel" destination="MAn-y0-nXv" id="lCY-Ux-eBB"/>
+                        <outlet property="currencyPicker" destination="ct2-jk-pgH" id="aWZ-DZ-dMl"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
